--- a/operator.html
+++ b/operator.html
@@ -1,3 +1,5 @@
+UPDATED Operator.html (Don't copy this line)
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -68,149 +70,52 @@
     <button class="back-button" onclick="goBack()">← Back</button>
   </div>
 
-  <script>
-    // Special operator name overrides for file naming
-    const nameOverrides = {
-      'Capitão': 'capitao',
-      'Nøkk': 'nokk',
-      'Jäger': 'jager',
-      'Thorn': 'thorn',
-      'Tubarão': 'tubarao',
-      // Add others if needed
-    };
+ <script>
+  const nameOverrides = {
+    'Capitão': 'capitao',
+    'Nøkk': 'nokk',
+    'Jäger': 'jager',
+    'Thorn': 'thorn',
+    'Tubarão': 'tubarao',
+    // Add others as needed
+  };
 
-    // Map operator names to teams for back button navigation
-    const operatorsTeams = {
-      // Attackers
-      'Striker': 'attacker',
-      'Sledge': 'attacker',
-      'Thatcher': 'attacker',
-      'Ash': 'attacker',
-      'Thermite': 'attacker',
-      'Twitch': 'attacker',
-      'Montagne': 'attacker',
-      'Glaz': 'attacker',
-      'Fuze': 'attacker',
-      'Blitz': 'attacker',
-      'IQ': 'attacker',
-      'Buck': 'attacker',
-      'Blackbeard': 'attacker',
-      'Capitão': 'attacker',
-      'Hibana': 'attacker',
-      'Jackal': 'attacker',
-      'Ying': 'attacker',
-      'Zofia': 'attacker',
-      'Dokkaebi': 'attacker',
-      'Lion': 'attacker',
-      'Finka': 'attacker',
-      'Maverick': 'attacker',
-      'Nomad': 'attacker',
-      'Gridlock': 'attacker',
-      'Nøkk': 'attacker',
-      'Amaru': 'attacker',
-      'Kali': 'attacker',
-      'Iana': 'attacker',
-      'Ace': 'attacker',
-      'Zero': 'attacker',
-      'Flores': 'attacker',
-      'Osa': 'attacker',
-      'Sens': 'attacker',
-      'Grim': 'attacker',
-      'Brava': 'attacker',
-      'Ram': 'attacker',
-      'Deimos': 'attacker',
-      'Rauora': 'attacker',
+  // Get operator name and origin grid from URL
+  const params = new URLSearchParams(window.location.search);
+  const operatorName = params.get('name');
+  const fromTeam = params.get('from'); // NEW: attackers or defenders
 
-      // Defenders
-      'Sentry': 'defender',
-      'Smoke': 'defender',
-      'Mute': 'defender',
-      'Castle': 'defender',
-      'Pulse': 'defender',
-      'Doc': 'defender',
-      'Rook': 'defender',
-      'Kapkan': 'defender',
-      'Tachanka': 'defender',
-      'Jäger': 'defender',
-      'Bandit': 'defender',
-      'Frost': 'defender',
-      'Valkyrie': 'defender',
-      'Caveira': 'defender',
-      'Echo': 'defender',
-      'Mira': 'defender',
-      'Lesion': 'defender',
-      'Ela': 'defender',
-      'Vigil': 'defender',
-      'Maestro': 'defender',
-      'Alibi': 'defender',
-      'Clash': 'defender',
-      'Kaid': 'defender',
-      'Mozzie': 'defender',
-      'Warden': 'defender',
-      'Goyo': 'defender',
-      'Wamai': 'defender',
-      'Oryx': 'defender',
-      'Melusi': 'defender',
-      'Aruni': 'defender',
-      'Thunderbird': 'defender',
-      'Thorn': 'defender',
-      'Azami': 'defender',
-      'Solis': 'defender',
-      'Fenrir': 'defender',
-      'Tubarão': 'defender',
-      'Skopos': 'defender',
-    };
-
-    // Get and decode operator name from URL parameters
-    const params = new URLSearchParams(window.location.search);
-    const operatorNameRaw = params.get('name') || '';
-    const operatorName = decodeURIComponent(operatorNameRaw).trim();
-
-    console.log('Operator name from URL:', operatorName);
-
-    // Generate the image filename from operator name
-    function generateFilename(name) {
-      if (!name) return '';
-      const normalized = nameOverrides[name] || name.toLowerCase()
-        .normalize('NFD')
-        .replace(/[\u0300-\u036f]/g, '')
-        .replace(/\s+/g, '-')
-        .replace(/[^a-z0-9-]/g, '');
-      return `r6-operators-base-${normalized}-removebg-preview.png`;
-    }
-
-    if (operatorName) {
-      const filename = generateFilename(operatorName);
-      const imgEl = document.getElementById('operatorImage');
-      imgEl.src = filename;
-      imgEl.alt = operatorName;
-      document.getElementById('operatorName').textContent = operatorName.toUpperCase();
-    } else {
-      document.getElementById('operatorName').textContent = 'NO OPERATOR SELECTED';
-      document.getElementById('operatorImage').style.display = 'none';
-    }
-
-    // Back button handler
-function goBack() {
-  if (!operatorName) {
-    window.location.href = 'grids.html';
-    return;
+  function generateFilename(name) {
+    if (!name) return '';
+    const normalized = nameOverrides[name] || name.toLowerCase()
+      .normalize('NFD')             // Normalize unicode characters
+      .replace(/[\u0300-\u036f]/g, '') // Remove accents
+      .replace(/\s+/g, '-')        // Replace spaces with dashes
+      .replace(/[^a-z0-9-]/g, ''); // Remove invalid chars
+    return `r6-operators-base-${normalized}-removebg-preview.png`;
   }
 
-  const normalizedName = Object.keys(operatorsTeams).find(
-    key => key.toUpperCase() === operatorName.toUpperCase()
-  );
-
-  const team = operatorsTeams[normalizedName];
-
-  if (team === 'attacker') {
-    window.location.href = 'grids.html#attackers';
-  } else if (team === 'defender') {
-    window.location.href = 'grids.html#defenders';
+  if (operatorName) {
+    const filename = generateFilename(operatorName);
+    const imgEl = document.getElementById('operatorImage');
+    imgEl.src = filename;
+    imgEl.alt = operatorName;
+    document.getElementById('operatorName').textContent = operatorName.toUpperCase();
   } else {
-    window.location.href = 'grids.html';
+    document.getElementById('operatorName').textContent = 'NO OPERATOR SELECTED';
+    document.getElementById('operatorImage').style.display = 'none';
   }
-}
-  </script>
+
+  function goBack() {
+    if (fromTeam === 'attacker') {
+      window.location.href = 'grids.html#attackers';
+    } else if (fromTeam === 'defender') {
+      window.location.href = 'grids.html#defenders';
+    } else {
+      window.location.href = 'grids.html'; // Fallback
+    }
+  }
+</script>
+
 </body>
 </html>
