--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
     <p class="description">
       Build your perfect Rainbow Six Siege look.<br>
-      Choose a team to start customizing operators with headgear and uniforms.
+      Preview headgear and uniforms before you buy from the Marketplace.
     </p>
 
     <div class="split-container">
