--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     </div>
 
     <footer>
-      <!-- Footer for credits or links -->
+      Test text for Footer
     </footer>
   </div>
 </body>
