--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     </div>
 
 <footer class="footer-grid">
-  <div class="footer-left">Built by Tyler</div>
+  <div class="footer-left">Built by LiFE7729</div>
   <div class="footer-center">Version 1.0 · June 2025</div>
   <div class="footer-right">© Ubisoft · Fan Project · Not affiliated with Ubisoft.<br>
   Disclaimer: This is a fan-made project for informational and reference purposes only.
