--- a/index.html
+++ b/index.html
@@ -128,7 +128,17 @@
   text-transform: uppercase;
   letter-spacing: 0.5px;
 }
-
+.disclaimer-text {
+  font-size: 0.7rem;
+  color: #888;
+  text-align: center;
+  margin-top: 10px;
+  padding-bottom: 20px;
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+}
+    
   </style>
 </head>
 <body>
@@ -154,11 +164,14 @@
 <footer class="footer-grid">
   <div class="footer-left">Built by LiFE7729</div>
   <div class="footer-center">Version 1.0 · June 2025</div>
-  <div class="footer-right">© Ubisoft · Fan Project · Not affiliated with Ubisoft.<br>
+  <div class="footer-right">© Ubisoft · Fan Project · Not affiliated with Ubisoft.</div>
+</footer>
+    <div class="disclaimer-text">
   Disclaimer: This is a fan-made project for informational and reference purposes only.
   Rainbow Six Siege and its associated imagery, logos, and trademarks are the property of Ubisoft.
-  Real-world insignias used in the game are the property of their respective organizations and are used here as part of Ubisoft’s fictional representation. This site is not affiliated with Ubisoft or any government or military agency.</div>
-</footer>
+  Real-world insignias used in the game are the property of their respective organizations and are used here as part of Ubisoft’s fictional representation. This site is not affiliated with Ubisoft or any government or military agency.
+</div>
+
 
   </div>
 </body>
