--- a/index.html
+++ b/index.html
@@ -162,8 +162,10 @@
     </div>
 
 <footer class="footer-grid">
-  <div class="footer-left">Built by LiFE7729</div>
-  <div class="footer-center">Version 1.0 · June 2025</div>
+  <div class="footer-left">Built by LiFE7729 <br>
+  Email for concerns: life7729.1@gmail.com</div>
+  <div class="footer-center">Version 1.0 · June 2025<br>
+  Tom Clancy's Rainbow Six: Siege X · Year 10 · Season 2</div>
   <div class="footer-right">© Ubisoft · Fan Project · Not affiliated with Ubisoft.</div>
 </footer>
     <div class="disclaimer-text">
