--- a/operator.html
+++ b/operator.html
@@ -17,9 +17,11 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      height: 100vh;
+      min-height: 100vh;
       text-align: center;
       text-transform: uppercase;
+      padding: 20px;
+      box-sizing: border-box;
     }
     .operator-container {
       background-color: rgba(0, 0, 0, 0.6);
@@ -37,10 +39,20 @@
       margin-bottom: 20px;
     }
     h1 {
-      margin: 0 0 20px;
+      margin: 0 0 10px;
       font-size: 2rem;
       letter-spacing: 2px;
       font-family: 'Russo One', Arial, sans-serif;
+    }
+    .operator-info {
+      margin-top: 15px;
+      text-align: left;
+      font-size: 1rem;
+      line-height: 1.4;
+      letter-spacing: 1px;
+    }
+    .operator-info p {
+      margin: 6px 0;
     }
     .back-button {
       background: transparent;
@@ -54,6 +66,8 @@
       transition: background-color 0.3s;
       text-transform: uppercase;
       font-family: 'Russo One', Arial, sans-serif;
+      margin-top: 25px;
+      width: 100%;
     }
     .back-button:hover {
       background-color: rgba(255, 255, 255, 0.2);
@@ -65,55 +79,80 @@
   <div class="operator-container">
     <img id="operatorImage" class="operator-image" src="" alt="Operator" />
     <h1 id="operatorName">Operator</h1>
+    <div class="operator-info" id="operatorInfo">
+      <!-- Operator info (CTU, Role, Armor, Speed) will be inserted here -->
+    </div>
     <button class="back-button" onclick="goBack()">← Back</button>
   </div>
 
- <script>
-  const nameOverrides = {
-    'Capitão': 'capitao',
-    'Nøkk': 'nokk',
-    'Jäger': 'jager',
-    'Thorn': 'thorn',
-    'Tubarão': 'tubarao',
-    // Add others as needed
-  };
+  <script>
+    const nameOverrides = {
+      'Capitão': 'capitao',
+      'Nøkk': 'nokk',
+      'Jäger': 'jager',
+      'Thorn': 'thorn',
+      'Tubarão': 'tubarao',
+      // Add others as needed
+    };
 
-  // Get operator name and origin grid from URL
-  const params = new URLSearchParams(window.location.search);
-  const operatorName = params.get('name');
-  const fromTeam = params.get('from'); // NEW: attackers or defenders
+    // Get operator name and origin grid from URL
+    const params = new URLSearchParams(window.location.search);
+    const operatorName = params.get('name');
+    const fromTeam = params.get('from'); // attacker or defender
 
-  function generateFilename(name) {
-    if (!name) return '';
-    const normalized = nameOverrides[name] || name.toLowerCase()
-      .normalize('NFD')             // Normalize unicode characters
-      .replace(/[\u0300-\u036f]/g, '') // Remove accents
-      .replace(/\s+/g, '-')        // Replace spaces with dashes
-      .replace(/[^a-z0-9-]/g, ''); // Remove invalid chars
-    return `r6-operators-base-${normalized}-removebg-preview.png`;
-  }
-
-  if (operatorName) {
-    const filename = generateFilename(operatorName);
-    const imgEl = document.getElementById('operatorImage');
-    imgEl.src = filename;
-    imgEl.alt = operatorName;
-    document.getElementById('operatorName').textContent = operatorName.toUpperCase();
-  } else {
-    document.getElementById('operatorName').textContent = 'NO OPERATOR SELECTED';
-    document.getElementById('operatorImage').style.display = 'none';
-  }
-
-  function goBack() {
-    if (fromTeam === 'attacker') {
-      window.location.href = 'grids.html#attackers';
-    } else if (fromTeam === 'defender') {
-      window.location.href = 'grids.html#defenders';
-    } else {
-      window.location.href = 'grids.html'; // Fallback
+    function generateFilename(name) {
+      if (!name) return '';
+      const normalized = nameOverrides[name] || name.toLowerCase()
+        .normalize('NFD')               // Normalize unicode characters
+        .replace(/[\u0300-\u036f]/g, '') // Remove accents
+        .replace(/\s+/g, '-')          // Replace spaces with dashes
+        .replace(/[^a-z0-9-]/g, '');   // Remove invalid chars
+      return `r6-operators-base-${normalized}-removebg-preview.png`;
     }
-  }
-</script>
+
+    function goBack() {
+      if (fromTeam === 'attacker') {
+        window.location.href = 'grids.html#attackers';
+      } else if (fromTeam === 'defender') {
+        window.location.href = 'grids.html#defenders';
+      } else {
+        window.location.href = 'grids.html'; // fallback
+      }
+    }
+
+    if (operatorName) {
+      const filename = generateFilename(operatorName);
+      const imgEl = document.getElementById('operatorImage');
+      imgEl.src = filename;
+      imgEl.alt = operatorName;
+      document.getElementById('operatorName').textContent = operatorName.toUpperCase();
+
+      // Fetch operator data and display info
+      fetch('operators.json')
+        .then(res => res.json())
+        .then(data => {
+          const opData = data.find(op => op.name.toLowerCase() === operatorName.toLowerCase());
+          const infoDiv = document.getElementById('operatorInfo');
+          if (opData) {
+            infoDiv.innerHTML = `
+              <p><strong>CTU:</strong> ${opData.ctu}</p>
+              <p><strong>Role:</strong> ${opData.role}</p>
+              <p><strong>Armor:</strong> ${opData.armor}</p>
+              <p><strong>Speed:</strong> ${opData.speed}</p>
+            `;
+          } else {
+            infoDiv.textContent = 'Operator info not found.';
+          }
+        })
+        .catch(() => {
+          document.getElementById('operatorInfo').textContent = 'Failed to load operator data.';
+        });
+    } else {
+      document.getElementById('operatorName').textContent = 'NO OPERATOR SELECTED';
+      document.getElementById('operatorImage').style.display = 'none';
+      document.getElementById('operatorInfo').textContent = '';
+    }
+  </script>
 
 </body>
 </html>
