--- a/operator.html
+++ b/operator.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Operator View</title>
-  <!-- Russo One font -->
   <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet" />
   <style>
     body {
@@ -42,10 +41,7 @@
       margin: 0 0 10px;
       font-size: 2rem;
       letter-spacing: 2px;
-      font-family: 'Russo One', Arial, sans-serif;
     }
-
-    /* DETAILS and SUMMARY styling */
 
     details {
       background-color: rgba(0,0,0,0.5);
@@ -61,7 +57,7 @@
       font-weight: bold;
       font-size: 1.1rem;
       outline: none;
-      list-style: none; /* remove default arrow */
+      list-style: none;
       cursor: pointer;
       user-select: none;
       padding: 5px 0;
@@ -74,13 +70,12 @@
     }
 
     summary::before {
-      content: "▶"; /* right arrow */
+      content: "▶";
       display: inline-block;
       margin-right: 8px;
       transition: transform 0.2s ease;
     }
 
-    /* Rotate arrow when open */
     details[open] > summary::before {
       transform: rotate(90deg);
     }
@@ -108,10 +103,10 @@
       box-shadow: 0 0 10px white;
       transition: background-color 0.3s;
       text-transform: uppercase;
-      font-family: 'Russo One', Arial, sans-serif;
       margin-top: 25px;
       width: 100%;
     }
+
     .back-button:hover {
       background-color: rgba(255, 255, 255, 0.2);
     }
@@ -123,10 +118,10 @@
     <img id="operatorImage" class="operator-image" src="" alt="Operator" />
     <h1 id="operatorName">Operator</h1>
 
-    <details id="operatorDetails">
+    <details id="operatorDetails" open>
       <summary>Operator Info</summary>
       <div class="operator-info" id="operatorInfo">
-        <!-- Operator info (CTU, Role, Armor, Speed) will be inserted here -->
+        <!-- Operator info will go here -->
       </div>
     </details>
 
@@ -140,21 +135,17 @@
       'Jäger': 'jager',
       'Thorn': 'thorn',
       'Tubarão': 'tubarao',
-      // Add others as needed
     };
 
-    // Get operator name and origin grid from URL
     const params = new URLSearchParams(window.location.search);
     const operatorName = params.get('name');
-    const fromTeam = params.get('from'); // attacker or defender
+    const fromTeam = params.get('from');
 
     function generateFilename(name) {
       if (!name) return '';
       const normalized = nameOverrides[name] || name.toLowerCase()
-        .normalize('NFD')               // Normalize unicode characters
-        .replace(/[\u0300-\u036f]/g, '') // Remove accents
-        .replace(/\s+/g, '-')          // Replace spaces with dashes
-        .replace(/[^a-z0-9-]/g, '');   // Remove invalid chars
+        .normalize('NFD').replace(/[\u0300-\u036f]/g, '')
+        .replace(/\s+/g, '-').replace(/[^a-z0-9-]/g, '');
       return `r6-operators-base-${normalized}-removebg-preview.png`;
     }
 
@@ -164,42 +155,47 @@
       } else if (fromTeam === 'defender') {
         window.location.href = 'grids.html#defenders';
       } else {
-        window.location.href = 'grids.html'; // fallback
+        window.location.href = 'grids.html';
       }
     }
 
-    if (operatorName) {
-      const filename = generateFilename(operatorName);
-      const imgEl = document.getElementById('operatorImage');
-      imgEl.src = filename;
-      imgEl.alt = operatorName;
-      document.getElementById('operatorName').textContent = operatorName.toUpperCase();
+    window.addEventListener('DOMContentLoaded', () => {
+      // Collapse info on mobile
+      if (window.innerWidth < 768) {
+        document.getElementById('operatorDetails').removeAttribute('open');
+      }
 
-      // Fetch operator data and display info
-      fetch('operators.json')
-        .then(res => res.json())
-        .then(data => {
-          const opData = data.find(op => op.name.toLowerCase() === operatorName.toLowerCase());
-          const infoDiv = document.getElementById('operatorInfo');
-          if (opData) {
-            infoDiv.innerHTML = `
-              <p><strong>CTU:</strong> ${opData.ctu}</p>
-              <p><strong>Role:</strong> ${opData.role}</p>
-              <p><strong>Armor:</strong> ${opData.armor}</p>
-              <p><strong>Speed:</strong> ${opData.speed}</p>
-            `;
-          } else {
-            infoDiv.textContent = 'Operator info not found.';
-          }
-        })
-        .catch(() => {
-          document.getElementById('operatorInfo').textContent = 'Failed to load operator data.';
-        });
-    } else {
-      document.getElementById('operatorName').textContent = 'NO OPERATOR SELECTED';
-      document.getElementById('operatorImage').style.display = 'none';
-      document.getElementById('operatorInfo').textContent = '';
-    }
+      if (operatorName) {
+        const filename = generateFilename(operatorName);
+        document.getElementById('operatorImage').src = filename;
+        document.getElementById('operatorImage').alt = operatorName;
+        document.getElementById('operatorName').textContent = operatorName.toUpperCase();
+
+        fetch('operators.json')
+          .then(res => res.json())
+          .then(data => {
+            const opData = data.find(op => op.name.toLowerCase() === operatorName.toLowerCase());
+            const infoDiv = document.getElementById('operatorInfo');
+            if (opData) {
+              infoDiv.innerHTML = `
+                <p><strong>CTU:</strong> ${opData.ctu}</p>
+                <p><strong>Role:</strong> ${opData.role}</p>
+                <p><strong>Armor:</strong> ${opData.armor}</p>
+                <p><strong>Speed:</strong> ${opData.speed}</p>
+              `;
+            } else {
+              infoDiv.textContent = 'Operator info not found.';
+            }
+          })
+          .catch(() => {
+            document.getElementById('operatorInfo').textContent = 'Failed to load operator data.';
+          });
+      } else {
+        document.getElementById('operatorName').textContent = 'NO OPERATOR SELECTED';
+        document.getElementById('operatorImage').style.display = 'none';
+        document.getElementById('operatorInfo').textContent = '';
+      }
+    });
   </script>
 
 </body>
