--- a/operator.html
+++ b/operator.html
@@ -171,26 +171,26 @@
         document.getElementById('operatorImage').alt = operatorName;
         document.getElementById('operatorName').textContent = operatorName.toUpperCase();
 
-        fetch('operators.json')
-          .then(res => res.json())
-          .then(data => {
-            const opData = data.find(op => op.name.toLowerCase() === normalizedName.toLowerCase());
-            const infoDiv = document.getElementById('operatorInfo');
-            if (opData) {
-              infoDiv.innerHTML = `
-                <p><strong>CTU:</strong> ${opData.ctu}</p>
-                <p><strong>Role:</strong> ${opData.role}</p>
-                <p><strong>Armor:</strong> ${opData.armor}</p>
-                <p><strong>Speed:</strong> ${opData.speed}</p>
-              `;
-            } else {
-              infoDiv.textContent = 'Operator info not found.';
-            }
-          })
-.catch(error => {
-  console.error("Error loading operator data:", error);
-  operatorDetails.innerHTML = "<p>❌ Failed to load operator data. Check the JSON file or console for details.</p>";
-});
+fetch('operators.json')
+  .then(res => res.json())
+  .then(data => {
+    const normalizedName = normalizeName(operatorName); // ✅ Define this!
+    const opData = data.find(op => normalizeName(op.name) === normalizedName); // ✅ Use helper
+    const infoDiv = document.getElementById('operatorInfo');
+    if (opData) {
+      infoDiv.innerHTML = `
+        <p><strong>CTU:</strong> ${opData.ctu}</p>
+        <p><strong>Role:</strong> ${opData.role}</p>
+        <p><strong>Armor:</strong> ${opData.armor}</p>
+        <p><strong>Speed:</strong> ${opData.speed}</p>
+      `;
+    } else {
+      infoDiv.textContent = 'Operator info not found.';
+    }
+  })
+  .catch(() => {
+    document.getElementById('operatorInfo').textContent = 'Failed to load operator data.';
+  });
       } else {
         document.getElementById('operatorName').textContent = 'NO OPERATOR SELECTED';
         document.getElementById('operatorImage').style.display = 'none';
